<resources>

    <string name="app_name">长春公交</string>
    <string name="nocontent">请输入查询内容</string>
    <string name="notargetline">没有找到相关线路</string>
    <string name="notargetstation">没有找到相关站点</string>
    <string name="back">返回</string>
    <string name="query">查 询</string>
    <string name="pleaseinputline">请输入公交线路</string>
    <string name="line_query">线路查询</string>
    <string name="station_query">站点查询</string>
    <string name="exchange_query">换乘查询</string>
    <string name="net_query">网络查询</string>
    <string name="pleaseinputstation">请输入站点名称</string>
    <string name="pleaseinputstartstation">请输入起点</string>
    <string name="pleaseinputendstation">请输入终点</string>
    <string name="choosestart">选择起点</string>
    <string name="chooseend">选择终点</string>
    <string name="too_close">呃…有点儿近，咱还是走过去吧</string>
    <string name="start_station_notexsit">无相关起点，请重新输入</string>
    <string name="end_station_notexsit">无相关终点，请重新输入</string>
    <string name="sorry_title"> 抱歉！</string>
    <string name="sorry_content">没有查询到合适的换乘方案，若要获得更详细的查询结果，请使用网络查询。</string>
	<string name="about_our">关于我们</string>
    
</resources>